refactor: improve person persistence mapper and gateway readability