@@ -2,7 +2,6 @@ package br.com.miguelalves.spring_clean_architecture_demo.infra.gateways;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.dao.DataIntegrityViolationException;
 
@@ -25,58 +24,73 @@ public class PersonRepositoryGateway implements PersonGateway {
 
     @Override
     public Person create(Person person) {
-        if (person.getCpf() != null && personRepository.existsByCpf(person.getCpf())) {
-            throw new DuplicateCpfException("CPF already exists");
-        }
+        validateCpfDoesNotExist(person.getCpf());
         try {
             PersonEntity entity = mapper.toEntity(person);
-            PersonEntity saved = personRepository.save(entity);
-            return mapper.toDomain(saved);
-        } catch (DataIntegrityViolationException ex) {
-            throw new DuplicateCpfException("CPF conflict");
+            PersonEntity savedEntity = personRepository.save(entity);
+            return mapper.toDomain(savedEntity);
+        } catch (DataIntegrityViolationException exception) {
+            throw new DuplicateCpfException("Cpf already exists");
         }
     }
 
     @Override
     public List<Person> findAll() {
-        return personRepository.findAll().stream().map(mapper::toDomain).collect(Collectors.toList());
+        return personRepository.findAll()
+                .stream()
+                .map(mapper::toDomain)
+                .toList();
     }
 
     @Override
     public Optional<Person> findById(Long id) {
-        return personRepository.findById(id).map(mapper::toDomain);
+        return personRepository.findById(id)
+                .map(mapper::toDomain);
     }
 
     @Override
     public Person update(Person person) {
-        if (person.getId() == null)
-            throw new ResourceNotFoundException("Person id required");
-        PersonEntity existing = personRepository.findById(person.getId())
-                .orElseThrow(() -> new ResourceNotFoundException("Person not found"));
-        // cpf unique check
-        if (person.getCpf() != null && !person.getCpf().equals(existing.getCpf())
-                && personRepository.existsByCpf(person.getCpf())) {
-            throw new DuplicateCpfException("CPF already exists");
-        }
-        PersonEntity toSave = mapper.toEntity(person);
-        toSave.setId(existing.getId());
+        PersonEntity existingEntity = findEntityByIdOrThrow(person.getId());
+        validateCpfForUpdate(person.getCpf(), existingEntity.getCpf());
         try {
-            PersonEntity saved = personRepository.save(toSave);
-            return mapper.toDomain(saved);
-        } catch (DataIntegrityViolationException ex) {
-            throw new DuplicateCpfException("CPF conflict");
+            PersonEntity entityToSave = mapper.toEntity(person);
+            entityToSave.setId(existingEntity.getId());
+            PersonEntity savedEntity = personRepository.save(entityToSave);
+            return mapper.toDomain(savedEntity);
+        } catch (DataIntegrityViolationException exception) {
+            throw new DuplicateCpfException("CPF already exists");
         }
     }
 
     @Override
     public void delete(Long id) {
-        PersonEntity existing = personRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Person not found"));
-        personRepository.delete(existing);
+        PersonEntity existingEntity = findEntityByIdOrThrow(id);
+        personRepository.delete(existingEntity);
     }
 
     @Override
     public boolean existsByCpf(String cpf) {
         return personRepository.existsByCpf(cpf);
+    }
+
+    private PersonEntity findEntityByIdOrThrow(Long id) {
+        if (id == null) {
+            throw new ResourceNotFoundException("Person id required");
+        }
+        return personRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Person not found"));
+    }
+
+    private void validateCpfDoesNotExist(String cpf) {
+        if (cpf != null && personRepository.existsByCpf(cpf)) {
+            throw new DuplicateCpfException("CPF already exists");
+        }
+    }
+
+    private void validateCpfForUpdate(String newCpf, String currentCpf) {
+        boolean cpfHasChanged = newCpf != null && !newCpf.equals(currentCpf);
+        if (cpfHasChanged && personRepository.existsByCpf(newCpf)) {
+            throw new DuplicateCpfException("CPF already exists");
+        }
     }
 }
